[#4] Generar los objectos de respuesta / controladores automaticamente
