# src/main/java/com/eliasfb/bgn/controller/GameController.java
@@ -1,43 +1,44 @@
 package com.eliasfb.bgn.controller;
 
-import com.eliasfb.bgn.dto.ResponseDto;
-import com.eliasfb.bgn.dto.game.CreateGameDto;
-import com.eliasfb.bgn.dto.game.GameDetailDto;
-import com.eliasfb.bgn.dto.game.GameDto;
-import com.eliasfb.bgn.dto.game.GameLocationUpdateDto;
+import com.eliasfb.bgn.openapi.api.GamesApi;
+import com.eliasfb.bgn.openapi.model.GameDetailDto;
+import com.eliasfb.bgn.openapi.model.GameDto;
+import com.eliasfb.bgn.openapi.model.InlineObjectDto;
+import com.eliasfb.bgn.openapi.model.ResponseDto;
 import com.eliasfb.bgn.service.GameService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.CrossOrigin;
 
 import java.util.List;
 
 @CrossOrigin(origins = "*", maxAge = 3600)
-@RestController
-@RequestMapping({"/games"})
-public class GameController {
+@Controller
+public class GameController implements GamesApi {
   @Autowired private GameService service;
 
-  @GetMapping
-  public List<GameDto> findAll() {
-    return this.service.findAll();
+  @Override
+  public ResponseEntity<List<GameDto>> getGames() {
+    return ResponseEntity.ok(this.service.findAll());
   }
 
-  @GetMapping(path = {"/ids"})
+  /*@GetMapping(path = {"/ids"})
   public List<Integer> findIds() {
     return this.service.findIds();
+  }*/
+
+  @Override
+  public ResponseEntity<GameDetailDto> getGameById(Integer gameId) {
+    return ResponseEntity.ok(this.service.findById(gameId));
   }
 
-  @GetMapping(path = {"/{id}"})
-  public GameDetailDto findGame(@PathVariable("id") int id) {
-    return this.service.findById(id);
+  @Override
+  public ResponseEntity<ResponseDto> createGame(InlineObjectDto createGame) {
+    return ResponseEntity.ok(this.service.create(createGame));
   }
 
-  @PostMapping
-  public ResponseDto create(@RequestBody CreateGameDto game) {
-    return this.service.create(game);
-  }
-
-  @PostMapping(path = {"/{id}/favorite"})
+  /*@PostMapping(path = {"/{id}/favorite"})
   public GameDetailDto updateGameFavoriteStatus(@PathVariable("id") int id) {
     return this.service.updateFavoriteStatus(id);
   }
@@ -54,5 +55,5 @@ public class GameController {
       @PathVariable("scoreId") int scoreId,
       @PathVariable("value") int value) {
     return this.service.updateScoreValue(id, scoreId, value);
-  }
+  }*/
 }
