# src/main/java/com/eliasfb/bgn/controller/PlayController.java
@@ -1,38 +1,39 @@
 package com.eliasfb.bgn.controller;
 
-import com.eliasfb.bgn.dto.ResponseDto;
-import com.eliasfb.bgn.dto.play.CreatePlayDto;
-import com.eliasfb.bgn.dto.play.PlayDetailDto;
-import com.eliasfb.bgn.dto.play.PlayDto;
+import com.eliasfb.bgn.openapi.api.PlaysApi;
+import com.eliasfb.bgn.openapi.model.PlayDetailDto;
+import com.eliasfb.bgn.openapi.model.PlayDto;
 import com.eliasfb.bgn.service.PlayService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.CrossOrigin;
 
 import java.util.List;
 
 @CrossOrigin(origins = "*", maxAge = 3600)
-@RestController
-@RequestMapping({"/plays"})
-public class PlayController {
+@Controller
+public class PlayController implements PlaysApi {
   @Autowired private PlayService service;
 
-  @GetMapping(path = {"/ids"})
+  /*@GetMapping(path = {"/ids"})
   public List<Integer> findIds() {
     return this.service.findIds();
+  }*/
+
+  @Override
+  public ResponseEntity<List<PlayDto>> getPlays() {
+    return ResponseEntity.ok(this.service.findAll());
   }
 
-  @GetMapping
-  public List<PlayDto> findAll() {
-    return this.service.findAll();
+  @Override
+  public ResponseEntity<PlayDetailDto> getPlayById(Integer playId) {
+    return ResponseEntity.ok(this.service.findById(playId));
   }
 
-  @GetMapping(path = {"/{id}"})
-  public PlayDetailDto findById(@PathVariable("id") int id) {
-    return this.service.findById(id);
-  }
-
-  @PostMapping
+  // TODO
+  /*@PostMapping
   public ResponseDto create(@RequestBody CreatePlayDto play) {
     return this.service.create(play);
-  }
+  }*/
 }
